# animal-genetic-testing

./: .env_template  .flake8  .gitignore  README.md  alembic.ini  conftest.py  pyproject.toml  pytest.ini
app/: auth.py  main.py  models.py  schemas.py
app/core/: config.py
app/db/: database.py  db_depends.py
app/migrations/: env.py
app/migrations/versions/: 1bb955a47a44_init_db.py  1e853e1e50ce_add_user_model.py  5ce424aa35e5_start_database.py  be8ce1612b45_init_db.py
app/routers/: animal_genetic_tests.py  statistics.py  users.py
tests/: conftest.py  mock.json  mock_users.json  test_api.py  test_auth.py
